--- a/Index.html
+++ b/Index.html
@@ -138,7 +138,7 @@
         <!-- Tools Grid -->
         <div class="tools-grid">
             <!-- Tool 1: Image Compression -->
-            <a href="image-compression.html" class="tool-card">
+            <a href=Img-compressor.html" class="tool-card">
                 <img src="https://cdn-icons-png.flaticon.com/512/3022/3022851.png" alt="Image Compression">
                 <h3>Image Compression</h3>
                 <p>Compress and optimize your images for web use with adjustable compression levels.</p>
